# platform-api

./: Cargo.toml  Dockerfile  LICENSE.md  openapi.yaml
.sqlx/: query-008352e4edc8506495a11888e883a5151cc11856a2334335e01e22212e39202f.json  query-011be491280e1827605cdbabc5210f224acef748ebaad8c1350a6dd651ad9d0f.json  query-01c88a3eee1c85827601e4af5a174a283489bc37fac7b804f184cbd82ab68793.json  query-02ada0b078884c427fd90692a4e310216f5a7e8b0febdac5e4dcdc8710989355.json  query-02bb8a8a1b8406eb3f9bb2599ca3fa896aa60ee876ba51ee25d47f83c8914b24.json  query-0359d1e45805354c31b2eccd0f6d74a9408a8e86326e855d822eb40b28d01e0b.json  query-05a3554de4e06222e0e43969fff4c44ccc99d679c4758b17baeba579b88d77f0.json  query-079f3458dcafbc73b69cfc247a10797da60ebc3831b6c0ed23bbfd150070b7cd.json  query-07c823f4dfd3374dd6562b1ab623158bab23be0ca116900de63062e88ba48e8d.json  query-08e8c67c9184071c71cdc47d513b850f89626aef0b8f15f20a5bf0fd07398df6.json  query-0b3774f1a7655ab0c418e540f7e61acc77f4fbd7aa5e6ffbadd4133f010e10f0.json  query-0c28642c81e833e7d6c81eca1461b6f2c4e814f666c8751a54ca159e9e06c82a.json  query-0c70266b2300a20a7edf0fe44ae3471028483d4cf6194524e0f52ec436c69bc0.json  query-0edbc6aae4da27290985d9d826d067cd512ce172957cb16ea64cf1541cce3851.json  query-0faf04f0e8760da90f7ade0754c048934f16829c6644270f121e0afba95bc62f.json  query-1289cba60711f6ee79b00e5255dd20176a97efeeb81bb2b0b22609bdd95ba004.json  query-158b6050306940c690003e8291f5b00f58657ebec5639ef10ed3f7e30bd5d0ad.json  query-184df84f4457734d1af0cb54e3e46fc73b8a119d6a528ce702058c82b5ec10f3.json  query-1918f571e780117637dba7f11372e38d7da056a47fca5ae3f4fdc7475ff0125d.json  query-199b317d4f66e70c2a099b7c0486bb7403871ee506c2531c9dd2ce54c68cffea.json  (+178 more)
console/: Cargo.toml
console/src/: main.rs
console/src/api/: analytics.rs  health.rs  mod.rs  project.rs
console/src/api/deployment/: ai_agents.rs  ai_knowledge_base.rs  ai_knowledge_base_search.rs  ai_tools.rs  ai_workflows.rs  b2b.rs  connection.rs  mod.rs  settings.rs  upload.rs  user.rs
console/src/application/: error.rs  mod.rs  response.rs  router.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  state.rs
shared/src/commands/: ai_agents.rs  ai_knowledge_base.rs  ai_tools.rs  ai_workflows.rs  create_organization.rs  create_workspace.rs  delete_organization.rs  deployment.rs  deployment_email_template.rs  email.rs  mod.rs  organization_member.rs  organization_role.rs  project.rs  s3.rs  update_organization.rs  user.rs  user_identifiers.rs
shared/src/dto/: mod.rs
shared/src/dto/json/: ai_knowledge_base.rs  deployment.rs  deployment_settings.rs
shared/src/dto/query/: mod.rs  sort.rs
shared/src/models/: ai_knowledge_base.rs  ai_tool.rs  ai_workflow.rs  deployment_auth_settings.rs  deployment_b2b_settings.rs  deployment_custom_roles.rs  deployment_restrictions.rs  deployment_sms_template.rs  deployment_ui_settings.rs  deployment_waitlist_user.rs  mod.rs  organization_permission.rs  organization_role.rs  project.rs  sign_in_attempt.rs  sign_up_attempt.rs  social_connection.rs  user_details.rs  workspace.rs  workspace_details.rs  workspace_membership.rs
shared/src/queries/: ai_agent.rs  ai_knowledge_base.rs  ai_tool.rs  ai_workflow.rs  b2b.rs  deployment.rs  mod.rs  project.rs  user.rs
shared/src/services/: clickhouse.rs  cloudflare.rs  dns_verification.rs  embedding.rs  mod.rs  postmark.rs  qdrant.rs  text_processing.rs
shared/src/utils/: handlebars_helpers.rs  mod.rs  name.rs  security.rs  validation.rs
shared/src/validators/: project.rs
src/: main.rs
src/api/: ai_agents.rs  mod.rs  (+6 more)
(+110 files in other folders)
