[package]
name = "dashboard-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15.7"
base64 = "0.22.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.82.0"
aws-sdk-cloudfront = "1.70.0"
sonyflake = "0.3"
rand = "0.9.0"
redis = { version = "0.29.5", features = ["tokio-comp"] }
ureq = { version = "3.0.11", features = ["json"] }
aws-sdk-sesv2 = "1.74.0"
rcgen = { version = "0.13.2", features = ["crypto"] }
handlebars = "6.2.0"
argon2 = "0.5.3"
totp-rs = "5.4.0"
regex = "1.10.2"
