[package]
name = "console"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared"}
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
uuid = { version = "1.6", features = ["v4", "serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
pdf-extract = "0.7.9"
lopdf = "0.34.0"
text-splitter = "0.16.0"
rustls = { version = "0.23.27", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"