[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.82.0"
sonyflake = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json", "bigdecimal"] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
handlebars = "6.2.0"
chrono = { version = "0.4", features = ["serde"] }
clickhouse = "0.13.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
regex = "1.10.2"
argon2 = "0.5.3"
totp-rs = "5.4.0"
tracing = "0.1"
llm = { version = "1.2.9", features = ["google"] }
ureq = { version = "3.0.11", features = ["json"] }
qdrant-client = "1.14.0"
pulldown-cmark = "0.12.2"
base64 = "0.22.1"
rcgen = { version = "0.13.2", features = ["crypto"] }